# sitecopy

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  REQUIREMENTS.md  pyproject.toml
.github/workflows/: ci.yml
examples/: config.yaml
src/sitecopy/: canonicalize.py  classify.py  cli.py  config.py  crawler.py  fetch.py  map_path.py  parse_css.py  parse_html.py  policy.py  report.py  store.py  validate.py
tests/: test_canonicalize.py  test_cli_mirror.py  test_map_path.py  test_rewrite_parsers.py
