[project]
name = "sitecopy"
version = "0.1.0"
description = "Mirror classic websites for local offline browsing."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "lxml>=5.0",
  "tinycss2>=1.3",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
sitecopy = "sitecopy.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sitecopy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
